// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: var(--wp-g2-control-border-radius);
  cursor: pointer;
  display: block;
  height: var(--wp-g2-control-height);
  max-width: 100%;
  min-width: 0;
  padding: calc(var(--wp-g2-grid-base) * 1);
  width: 100%;
}

@media (prefers-reduced-motion) {
  .emotion-0 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-0:focus {
  outline: none;
}

.emotion-0::-moz-focus-outer {
  border: 0;
}

.emotion-0::-webkit-slider-runnable-track {
  background: linear-gradient( to right, var(--wp-g2-color-admin) calc(var(--progress)), var(--wp-g2-control-background-dim-color) calc(var(--progress)) );
  border-radius: 2px;
  height: 2px;
}

*:disabled.emotion-0::-webkit-slider-runnable-track {
  background: var(--wp-g2-control-background-dim-color);
}

.emotion-0::-moz-range-track {
  background: linear-gradient( to right, var(--wp-g2-color-admin) calc(var(--progress)), var(--wp-g2-control-background-dim-color) calc(var(--progress)) );
  border-radius: 2px;
  height: 2px;
  will-change: transform;
}

*:disabled.emotion-0::-moz-range-track {
  background: var(--wp-g2-control-background-dim-color);
}

.emotion-0::-webkit-slider-thumb {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: var(--wp-g2-slider-thumb-background-color);
  border: 1px solid var(--wp-g2-slider-thumb-border-color);
  border-radius: 50%;
  box-shadow: var(--wp-g2-slider-thumb-box-shadow);
  cursor: pointer;
  height: 12px;
  margin-top: -5px;
  opacity: 1;
  width: 12px;
  -webkit-transition: box-shadow ease var(--wp-g2-transition-duration-fast);
  transition: box-shadow ease var(--wp-g2-transition-duration-fast);
}

*:disabled.emotion-0::-webkit-slider-thumb {
  background: var(--wp-g2-color-text-muted);
  border-color: var(--wp-g2-color-text-muted);
}

.emotion-0::-moz-range-thumb {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: var(--wp-g2-slider-thumb-background-color);
  border: 1px solid var(--wp-g2-slider-thumb-border-color);
  border-radius: 50%;
  box-shadow: var(--wp-g2-slider-thumb-box-shadow);
  cursor: pointer;
  height: 12px;
  margin-top: -5px;
  opacity: 1;
  width: 12px;
  -webkit-transition: box-shadow ease var(--wp-g2-transition-duration-fast);
  transition: box-shadow ease var(--wp-g2-transition-duration-fast);
  will-change: transform;
}

*:disabled.emotion-0::-moz-range-thumb {
  background: var(--wp-g2-color-text-muted);
  border-color: var(--wp-g2-color-text-muted);
}

.emotion-0:focus::-webkit-slider-thumb {
  box-shadow: var(--wp-g2-control-pseudo-box-shadow-focus-small);
}

.emotion-0:focus::-moz-range-thumb {
  box-shadow: var(--wp-g2-control-pseudo-box-shadow-focus-small);
}

<input
  class="components-slider wp-components-slider ic-1km1xno ic-192yz5d emotion-0"
  data-g2-c16t="true"
  data-g2-component="Slider"
  id="slider"
  max="100"
  min="0"
  style="--progress: 50%;"
  type="range"
  value="50"
/>
`;

exports[`props should render max 1`] = `
.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: var(--wp-g2-control-border-radius);
  cursor: pointer;
  display: block;
  height: var(--wp-g2-control-height);
  max-width: 100%;
  min-width: 0;
  padding: calc(var(--wp-g2-grid-base) * 1);
  width: 100%;
}

@media (prefers-reduced-motion) {
  .emotion-0 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-0:focus {
  outline: none;
}

.emotion-0::-moz-focus-outer {
  border: 0;
}

.emotion-0::-webkit-slider-runnable-track {
  background: linear-gradient( to right, var(--wp-g2-color-admin) calc(var(--progress)), var(--wp-g2-control-background-dim-color) calc(var(--progress)) );
  border-radius: 2px;
  height: 2px;
}

*:disabled.emotion-0::-webkit-slider-runnable-track {
  background: var(--wp-g2-control-background-dim-color);
}

.emotion-0::-moz-range-track {
  background: linear-gradient( to right, var(--wp-g2-color-admin) calc(var(--progress)), var(--wp-g2-control-background-dim-color) calc(var(--progress)) );
  border-radius: 2px;
  height: 2px;
  will-change: transform;
}

*:disabled.emotion-0::-moz-range-track {
  background: var(--wp-g2-control-background-dim-color);
}

.emotion-0::-webkit-slider-thumb {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: var(--wp-g2-slider-thumb-background-color);
  border: 1px solid var(--wp-g2-slider-thumb-border-color);
  border-radius: 50%;
  box-shadow: var(--wp-g2-slider-thumb-box-shadow);
  cursor: pointer;
  height: 12px;
  margin-top: -5px;
  opacity: 1;
  width: 12px;
  -webkit-transition: box-shadow ease var(--wp-g2-transition-duration-fast);
  transition: box-shadow ease var(--wp-g2-transition-duration-fast);
}

*:disabled.emotion-0::-webkit-slider-thumb {
  background: var(--wp-g2-color-text-muted);
  border-color: var(--wp-g2-color-text-muted);
}

.emotion-0::-moz-range-thumb {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: var(--wp-g2-slider-thumb-background-color);
  border: 1px solid var(--wp-g2-slider-thumb-border-color);
  border-radius: 50%;
  box-shadow: var(--wp-g2-slider-thumb-box-shadow);
  cursor: pointer;
  height: 12px;
  margin-top: -5px;
  opacity: 1;
  width: 12px;
  -webkit-transition: box-shadow ease var(--wp-g2-transition-duration-fast);
  transition: box-shadow ease var(--wp-g2-transition-duration-fast);
  will-change: transform;
}

*:disabled.emotion-0::-moz-range-thumb {
  background: var(--wp-g2-color-text-muted);
  border-color: var(--wp-g2-color-text-muted);
}

.emotion-0:focus::-webkit-slider-thumb {
  box-shadow: var(--wp-g2-control-pseudo-box-shadow-focus-small);
}

.emotion-0:focus::-moz-range-thumb {
  box-shadow: var(--wp-g2-control-pseudo-box-shadow-focus-small);
}

<input
  class="components-slider wp-components-slider ic-1km1xno ic-192yz5d emotion-0"
  data-g2-c16t="true"
  data-g2-component="Slider"
  id="slider"
  max="50"
  min="0"
  style="--progress: 100%;"
  type="range"
  value="50"
/>
`;

exports[`props should render min 1`] = `
.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: var(--wp-g2-control-border-radius);
  cursor: pointer;
  display: block;
  height: var(--wp-g2-control-height);
  max-width: 100%;
  min-width: 0;
  padding: calc(var(--wp-g2-grid-base) * 1);
  width: 100%;
}

@media (prefers-reduced-motion) {
  .emotion-0 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-0:focus {
  outline: none;
}

.emotion-0::-moz-focus-outer {
  border: 0;
}

.emotion-0::-webkit-slider-runnable-track {
  background: linear-gradient( to right, var(--wp-g2-color-admin) calc(var(--progress)), var(--wp-g2-control-background-dim-color) calc(var(--progress)) );
  border-radius: 2px;
  height: 2px;
}

*:disabled.emotion-0::-webkit-slider-runnable-track {
  background: var(--wp-g2-control-background-dim-color);
}

.emotion-0::-moz-range-track {
  background: linear-gradient( to right, var(--wp-g2-color-admin) calc(var(--progress)), var(--wp-g2-control-background-dim-color) calc(var(--progress)) );
  border-radius: 2px;
  height: 2px;
  will-change: transform;
}

*:disabled.emotion-0::-moz-range-track {
  background: var(--wp-g2-control-background-dim-color);
}

.emotion-0::-webkit-slider-thumb {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: var(--wp-g2-slider-thumb-background-color);
  border: 1px solid var(--wp-g2-slider-thumb-border-color);
  border-radius: 50%;
  box-shadow: var(--wp-g2-slider-thumb-box-shadow);
  cursor: pointer;
  height: 12px;
  margin-top: -5px;
  opacity: 1;
  width: 12px;
  -webkit-transition: box-shadow ease var(--wp-g2-transition-duration-fast);
  transition: box-shadow ease var(--wp-g2-transition-duration-fast);
}

*:disabled.emotion-0::-webkit-slider-thumb {
  background: var(--wp-g2-color-text-muted);
  border-color: var(--wp-g2-color-text-muted);
}

.emotion-0::-moz-range-thumb {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: var(--wp-g2-slider-thumb-background-color);
  border: 1px solid var(--wp-g2-slider-thumb-border-color);
  border-radius: 50%;
  box-shadow: var(--wp-g2-slider-thumb-box-shadow);
  cursor: pointer;
  height: 12px;
  margin-top: -5px;
  opacity: 1;
  width: 12px;
  -webkit-transition: box-shadow ease var(--wp-g2-transition-duration-fast);
  transition: box-shadow ease var(--wp-g2-transition-duration-fast);
  will-change: transform;
}

*:disabled.emotion-0::-moz-range-thumb {
  background: var(--wp-g2-color-text-muted);
  border-color: var(--wp-g2-color-text-muted);
}

.emotion-0:focus::-webkit-slider-thumb {
  box-shadow: var(--wp-g2-control-pseudo-box-shadow-focus-small);
}

.emotion-0:focus::-moz-range-thumb {
  box-shadow: var(--wp-g2-control-pseudo-box-shadow-focus-small);
}

<input
  class="components-slider wp-components-slider ic-1km1xno ic-192yz5d emotion-0"
  data-g2-c16t="true"
  data-g2-component="Slider"
  id="slider"
  max="100"
  min="5"
  style="--progress: 47.368421052631575%;"
  type="range"
  value="50"
/>
`;

exports[`props should render size 1`] = `
.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: var(--wp-g2-control-border-radius);
  cursor: pointer;
  display: block;
  height: var(--wp-g2-control-height);
  max-width: 100%;
  min-width: 0;
  padding: calc(var(--wp-g2-grid-base) * 1);
  width: 100%;
  height: var(--wp-g2-control-height-small);
}

@media (prefers-reduced-motion) {
  .emotion-0 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-0:focus {
  outline: none;
}

.emotion-0::-moz-focus-outer {
  border: 0;
}

.emotion-0::-webkit-slider-runnable-track {
  background: linear-gradient( to right, var(--wp-g2-color-admin) calc(var(--progress)), var(--wp-g2-control-background-dim-color) calc(var(--progress)) );
  border-radius: 2px;
  height: 2px;
}

*:disabled.emotion-0::-webkit-slider-runnable-track {
  background: var(--wp-g2-control-background-dim-color);
}

.emotion-0::-moz-range-track {
  background: linear-gradient( to right, var(--wp-g2-color-admin) calc(var(--progress)), var(--wp-g2-control-background-dim-color) calc(var(--progress)) );
  border-radius: 2px;
  height: 2px;
  will-change: transform;
}

*:disabled.emotion-0::-moz-range-track {
  background: var(--wp-g2-control-background-dim-color);
}

.emotion-0::-webkit-slider-thumb {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: var(--wp-g2-slider-thumb-background-color);
  border: 1px solid var(--wp-g2-slider-thumb-border-color);
  border-radius: 50%;
  box-shadow: var(--wp-g2-slider-thumb-box-shadow);
  cursor: pointer;
  height: 12px;
  margin-top: -5px;
  opacity: 1;
  width: 12px;
  -webkit-transition: box-shadow ease var(--wp-g2-transition-duration-fast);
  transition: box-shadow ease var(--wp-g2-transition-duration-fast);
}

*:disabled.emotion-0::-webkit-slider-thumb {
  background: var(--wp-g2-color-text-muted);
  border-color: var(--wp-g2-color-text-muted);
}

.emotion-0::-moz-range-thumb {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: var(--wp-g2-slider-thumb-background-color);
  border: 1px solid var(--wp-g2-slider-thumb-border-color);
  border-radius: 50%;
  box-shadow: var(--wp-g2-slider-thumb-box-shadow);
  cursor: pointer;
  height: 12px;
  margin-top: -5px;
  opacity: 1;
  width: 12px;
  -webkit-transition: box-shadow ease var(--wp-g2-transition-duration-fast);
  transition: box-shadow ease var(--wp-g2-transition-duration-fast);
  will-change: transform;
}

*:disabled.emotion-0::-moz-range-thumb {
  background: var(--wp-g2-color-text-muted);
  border-color: var(--wp-g2-color-text-muted);
}

.emotion-0:focus::-webkit-slider-thumb {
  box-shadow: var(--wp-g2-control-pseudo-box-shadow-focus-small);
}

.emotion-0:focus::-moz-range-thumb {
  box-shadow: var(--wp-g2-control-pseudo-box-shadow-focus-small);
}

<input
  class="components-slider wp-components-slider ic-1km1xno ic-192yz5d emotion-0"
  data-g2-c16t="true"
  data-g2-component="Slider"
  id="slider"
  max="100"
  min="0"
  style="--progress: 50%;"
  type="range"
  value="50"
/>
`;

exports[`props should render unit value 1`] = `
.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: var(--wp-g2-control-border-radius);
  cursor: pointer;
  display: block;
  height: var(--wp-g2-control-height);
  max-width: 100%;
  min-width: 0;
  padding: calc(var(--wp-g2-grid-base) * 1);
  width: 100%;
}

@media (prefers-reduced-motion) {
  .emotion-0 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-0:focus {
  outline: none;
}

.emotion-0::-moz-focus-outer {
  border: 0;
}

.emotion-0::-webkit-slider-runnable-track {
  background: linear-gradient( to right, var(--wp-g2-color-admin) calc(var(--progress)), var(--wp-g2-control-background-dim-color) calc(var(--progress)) );
  border-radius: 2px;
  height: 2px;
}

*:disabled.emotion-0::-webkit-slider-runnable-track {
  background: var(--wp-g2-control-background-dim-color);
}

.emotion-0::-moz-range-track {
  background: linear-gradient( to right, var(--wp-g2-color-admin) calc(var(--progress)), var(--wp-g2-control-background-dim-color) calc(var(--progress)) );
  border-radius: 2px;
  height: 2px;
  will-change: transform;
}

*:disabled.emotion-0::-moz-range-track {
  background: var(--wp-g2-control-background-dim-color);
}

.emotion-0::-webkit-slider-thumb {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: var(--wp-g2-slider-thumb-background-color);
  border: 1px solid var(--wp-g2-slider-thumb-border-color);
  border-radius: 50%;
  box-shadow: var(--wp-g2-slider-thumb-box-shadow);
  cursor: pointer;
  height: 12px;
  margin-top: -5px;
  opacity: 1;
  width: 12px;
  -webkit-transition: box-shadow ease var(--wp-g2-transition-duration-fast);
  transition: box-shadow ease var(--wp-g2-transition-duration-fast);
}

*:disabled.emotion-0::-webkit-slider-thumb {
  background: var(--wp-g2-color-text-muted);
  border-color: var(--wp-g2-color-text-muted);
}

.emotion-0::-moz-range-thumb {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: var(--wp-g2-slider-thumb-background-color);
  border: 1px solid var(--wp-g2-slider-thumb-border-color);
  border-radius: 50%;
  box-shadow: var(--wp-g2-slider-thumb-box-shadow);
  cursor: pointer;
  height: 12px;
  margin-top: -5px;
  opacity: 1;
  width: 12px;
  -webkit-transition: box-shadow ease var(--wp-g2-transition-duration-fast);
  transition: box-shadow ease var(--wp-g2-transition-duration-fast);
  will-change: transform;
}

*:disabled.emotion-0::-moz-range-thumb {
  background: var(--wp-g2-color-text-muted);
  border-color: var(--wp-g2-color-text-muted);
}

.emotion-0:focus::-webkit-slider-thumb {
  box-shadow: var(--wp-g2-control-pseudo-box-shadow-focus-small);
}

.emotion-0:focus::-moz-range-thumb {
  box-shadow: var(--wp-g2-control-pseudo-box-shadow-focus-small);
}

<input
  class="components-slider wp-components-slider ic-1km1xno ic-192yz5d emotion-0"
  data-g2-c16t="true"
  data-g2-component="Slider"
  id="slider"
  max="100"
  min="0"
  style="--progress: 40%;"
  type="range"
  value="40"
/>
`;

exports[`props should render value 1`] = `
.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: var(--wp-g2-control-border-radius);
  cursor: pointer;
  display: block;
  height: var(--wp-g2-control-height);
  max-width: 100%;
  min-width: 0;
  padding: calc(var(--wp-g2-grid-base) * 1);
  width: 100%;
}

@media (prefers-reduced-motion) {
  .emotion-0 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-0:focus {
  outline: none;
}

.emotion-0::-moz-focus-outer {
  border: 0;
}

.emotion-0::-webkit-slider-runnable-track {
  background: linear-gradient( to right, var(--wp-g2-color-admin) calc(var(--progress)), var(--wp-g2-control-background-dim-color) calc(var(--progress)) );
  border-radius: 2px;
  height: 2px;
}

*:disabled.emotion-0::-webkit-slider-runnable-track {
  background: var(--wp-g2-control-background-dim-color);
}

.emotion-0::-moz-range-track {
  background: linear-gradient( to right, var(--wp-g2-color-admin) calc(var(--progress)), var(--wp-g2-control-background-dim-color) calc(var(--progress)) );
  border-radius: 2px;
  height: 2px;
  will-change: transform;
}

*:disabled.emotion-0::-moz-range-track {
  background: var(--wp-g2-control-background-dim-color);
}

.emotion-0::-webkit-slider-thumb {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: var(--wp-g2-slider-thumb-background-color);
  border: 1px solid var(--wp-g2-slider-thumb-border-color);
  border-radius: 50%;
  box-shadow: var(--wp-g2-slider-thumb-box-shadow);
  cursor: pointer;
  height: 12px;
  margin-top: -5px;
  opacity: 1;
  width: 12px;
  -webkit-transition: box-shadow ease var(--wp-g2-transition-duration-fast);
  transition: box-shadow ease var(--wp-g2-transition-duration-fast);
}

*:disabled.emotion-0::-webkit-slider-thumb {
  background: var(--wp-g2-color-text-muted);
  border-color: var(--wp-g2-color-text-muted);
}

.emotion-0::-moz-range-thumb {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: var(--wp-g2-slider-thumb-background-color);
  border: 1px solid var(--wp-g2-slider-thumb-border-color);
  border-radius: 50%;
  box-shadow: var(--wp-g2-slider-thumb-box-shadow);
  cursor: pointer;
  height: 12px;
  margin-top: -5px;
  opacity: 1;
  width: 12px;
  -webkit-transition: box-shadow ease var(--wp-g2-transition-duration-fast);
  transition: box-shadow ease var(--wp-g2-transition-duration-fast);
  will-change: transform;
}

*:disabled.emotion-0::-moz-range-thumb {
  background: var(--wp-g2-color-text-muted);
  border-color: var(--wp-g2-color-text-muted);
}

.emotion-0:focus::-webkit-slider-thumb {
  box-shadow: var(--wp-g2-control-pseudo-box-shadow-focus-small);
}

.emotion-0:focus::-moz-range-thumb {
  box-shadow: var(--wp-g2-control-pseudo-box-shadow-focus-small);
}

<input
  class="components-slider wp-components-slider ic-1km1xno ic-192yz5d emotion-0"
  data-g2-c16t="true"
  data-g2-component="Slider"
  id="slider"
  max="100"
  min="0"
  style="--progress: 40%;"
  type="range"
  value="40"
/>
`;
